[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>", "Gregor Reitzenstein <dean4devil@paranoidlabs.org>"]
description = "Pure-Rust LDAPv3 Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.6.1"

[dependencies]
byteorder = "1.0.0"
bytes = "0.4.1"
futures = "0.1.15"
lazy_static = "1.1"
log = "0.4"
native-tls = { version = "0.2", optional = true }
nom = "2.0"
tokio-codec = "0.1"
tokio-core = "0.1"
tokio-io = "0.1.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-uds = { version = "0.1.4" , optional = true }
tokio-uds-proto = { version = "0.1", optional = true }
url = "1.4.0"

[dependencies.lber]
path = "lber"
version = "0.1.6"

[dependencies.tokio-tls]
version = "0.2"
optional = true

[features]
default = ["tls", "uds"]
tls = ["native-tls", "tokio-tls"]
uds = ["tokio-uds", "tokio-uds-proto"]
minimal = []

[dev-dependencies]
env_logger = "0.5"
maplit = "1.0"

[workspace]
members = [".", "lber"]
