[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "Pure-Rust LDAP Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
categories = ["authentication", "network-programming"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.11.3"
edition = "2021"

[package.metadata.docs.rs]
default-features = false
features = ["sync", "tls", "gssapi"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.41.0", features = ["macros", "io-util", "sync", "time", "net"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1.16"
bytes = "1.8.0"
nom = "7.1.1"
url = "2.3.1"
futures = "0.3.31"
percent-encoding = "2.2.0"
futures-util = "0.3.31"
log = "0.4.22"
thiserror = "1.0.65"
native-tls = { version = "0.2.11", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
rustls = { version = "0.23.16", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
rustls-native-certs = { version = "0.8.0", optional = true }
x509-parser = { version = "0.16.0", optional = true }
ring = { version = "0.17.8", optional = true }
cross-krb5 = { version = "0.4.1", optional = true }
sspi = { version = "0.14.2", optional = true }
async-trait = "0.1.83"

[dependencies.lber]
path = "lber"
version = "0.4.3"

[features]
default = ["sync", "tls"]
tls = ["tls-native"]
tls-native = ["dep:native-tls", "dep:tokio-native-tls", "tokio/rt"]
tls-rustls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-native-certs", "dep:x509-parser", "dep:ring", "tokio/rt"]
sync = ["tokio/rt"]
gssapi = ["cross-krb5"]
ntlm = ["sspi","dep:ring"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net", "rt-multi-thread"] }
env_logger = "0.11.5"

[workspace]
members = [".", "lber"]
